[package]
name = "blih"
version = "0.0.3"
authors = ["Zacharie Corniere <cornierez@gmail.com>"]
description = "Epitech blih cli interface"
repository = "https://github.com/zcorniere/blih-rs"
license = "GPL-2.0-only"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12"

[dependencies.blih_rs]
path = "./blih_rs"
version = "0.0.5"

[dependencies.clap]
version = "~2.33"
features = ["yaml"]

[dependencies.reqwest]
version = "~0.10"
