[package]
name = "blih_rs"
version = "0.0.1"
authors = ["Zacharie Corniere <cornierez@gmail.com>"]
description = "Epitech blih interface in rust"
repository = "https://github.com/zcorniere/blih-rs"
license = "GPL-2.0-only"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpassword = "4.0"
rust-crypto = "0.2"
hex = "0.4.2"

[dependencies.reqwest]
version = "~0.10"
default-features = true
features = ["json", "blocking"]
